   (See LP #1278780)
 * kernel_crashdump: Enforce that the log/dmesg files are not a symlink. This
   prevents normal users from pre-creating a symlink to the predictable .crash
   file, and thus triggering a "fill up disk" DoS attack when the .crash report
   tries to include itself. Thanks to halfdog for discovering this!
   (CVE-2015-1338, part of LP #1492570)

2.18.1 (2015-09-10)
-------------------
 * test_hooks.py: Adjust for gcc executable names that don't include the minor
   version number.
 * When determinining the logind session and $XDG_SESSION_ID is not set, fall
   back to reading it from /proc/pid/cgroup.
 * whoopsie-upload-all: Intercept OSError too (e. g. "No space left on
   device"). (LP: #1476258)
 * apport-retrace: Only consider the file name of a source file, not its path;
   the latter often contains parts like "../" or directories which are specific
   to a build machine. This fixes most broken StacktraceSource results.
   (LP: #1462491)
 * packaging.py: Only consider first word in /etc/os-release's NAME value. This
   works around Debian's inconsistent value. (LP: #1408245)
 * Unify and simplify Package: field generation in kernel_crashdump,
   kernel_oops, and package_hook by using the new Report.add_package() method.
   (LP: #1485787)
 * sandboxutils.py, make_sandbox(): Make "Cannot find package which ships
   Executable/InterpreterPath" fatal, to save some unnecessary package unpack
   cycles. (LP: #1487174)

2.18 (2015-07-17)
-----------------
 * Fix backend_apt_dpkg.test_install_packages_permanent_sandbox test to more
   carefully restore the environment and apt config.
 * Enable suid_dumpable in the init.d script to also get Apport reports about
   suid, unreadable, and otherwise protected binaries. These will be "system
   reports" owned and readable by root only.
 * init.d script: Fix tab usage inconsistencies.
 * apport-gtk: Use GtkWidget::valign property instead of GtkMisc::yalign which