@@ -31,5 +31,5 @@ else:
     pr['PreprocessedSource'] = (sourcefile, False)
 
 # write report
-with open(apport.fileutils.make_report_path(pr), 'wb') as f:
+with apport.fileutils.make_report_file(pr) as f:
     pr.write(f)
