@@ -53,7 +53,7 @@ except IOError:
     pass
 
 try:
-    with open(apport.fileutils.make_report_path(pr), 'wb') as f:
+    with apport.fileutils.make_report_file(pr) as f:
         pr.write(f)
 except IOError as e:
     apport.fatal('Cannot create report: ' + str(e))
