@@ -35,7 +35,7 @@ if os.path.exists(vmcore_path):
     try:
         core_fd = os.open(vmcore_path, os.O_RDONLY | os.O_NOFOLLOW)
         pr['VmCore'] = (os.fdopen(core_fd, 'rb'),)
-        with open(apport.fileutils.make_report_path(pr), 'wb') as f:
+        with apport.fileutils.make_report_file(pr) as f:
             pr.write(f)
     except (IOError, OSError) as e:
         apport.fatal('Cannot create report: ' + str(e))
@@ -60,8 +60,8 @@ else:
                 crash_report = os.path.join(apport.fileutils.report_dir, report_name)
                 dmesg_fd = os.open(dmesg_file, os.O_RDONLY | os.O_NOFOLLOW)
                 pr['VmCoreDmesg'] = (os.fdopen(dmesg_fd, 'rb'),)
-                if not os.path.exists(crash_report):
-                    with open(crash_report, 'wb') as f:
-                        pr.write(f)
+                # TODO: Replace with open(..., 'xb') once we drop Python 2 support
+                with os.fdopen(os.open(crash_report, os.O_WRONLY | os.O_CREAT | os.O_EXCL, 0o640), 'wb') as f:
+                    pr.write(f)
             except (IOError, OSError) as e:
                 apport.fatal('Cannot create report: ' + str(e))
